fixed alignment

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ img#logo-overlay {
 }
 
 .option.open {
-    width: 22vw;
+    width: 30vw;
     max-width: 100vw;
     transform: translateX(-22vw);
     filter: opacity(1);
